[package]
name = "ssort"
version = "0.1.0"
authors = ["Christian Vetter <christian.vetter@here.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[dev-dependencies]
criterion = "0.3"
rand_pcg = "0.2"

[[bench]]
name = "small"
harness = false
